# unic

./: README.md  dune-project  unic.opam  uniq.opam
docs/: LIMITATIONS.md
lib/: dune  uniq.mli  uniq.mllib  uniq_cfg.ml  uniq_cfg.mli  uniq_cfg.mllib  uniq_clos.ml  uniq_clos.mli  uniq_info.ml  uniq_info.mli  uniq_lense.ml  uniq_meta.ml  uniq_meta.mli  uniq_ml.ml  uniq_ml.mli  uniq_ml.mllib  uniq_mod.ml  uniq_mod.mli  uniq_policy.ml  uniq_policy.mli  uniq_resolve.ml  uniq_resolve.mli  uniq_solve.ml  uniq_solve.mli  uniq_solver.ml  uniq_solver.mli  uniq_top.ml  uniq_top.mllib  uniq_top_init.ml  uniq_vendor.ml
test/: apply.ml  basic.ml
test/basics/: dune  test.t
