opam-version: "2.0"
name:         "uniq"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://git.robur.coop/robur/uniq"
bug-reports:  "https://git.robur.coop/robur/uniq/issues"
dev-repo:     "git+https://git.robur.coop/robur/uniq.git"
license:      "AGPL"

build: ["dune" "build" "-p" name "-j" jobs]

depends: [
  "ocaml"       {>= "4.07.0"}
  "dune"        {>= "2.8.0"}
  "uniq"        {= version}
  "re"
  "bos"
  "fpath"
  "fmt"
  "logs"
  "cmdliner"
]
pin-depends: [
  [ "codept" "git+https://github.com/Octachron/codept.git#1700ecd55380f93f7f005a37c0fa84a4b1bd9a2e" ]
]
