opam-version: "2.0"
name:         "uniq"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://git.robur.coop/robur/uniq"
bug-reports:  "https://git.robur.coop/robur/uniq/issues"
dev-repo:     "git+https://git.robur.coop/robur/uniq.git"
license:      "MIT"

build: ["dune" "build" "-p" name "-j" jobs]

depends: [
  "ocaml"       {>= "4.07.0"}
  "dune"        {>= "2.8.0"}
  "codept"      {>= "0.12.1"}
  "opam-state"
  "opam-format"
  "opam-core"
  "logs"
  "fmt"
  "fpath"
  "bos"
  "bcfgt"
]
