(library
 (name uniq_ml)
 (public_name uniq.ml)
 (modules uniq_ml)
 (wrapped false)
 (libraries
  codept-lib
  codept-lib.bundled
  compiler-libs.common
  logs
  fmt
  fpath))

(library
 (name uniq_mod)
 (public_name uniq.mod)
 (modules uniq_mod uniq_info uniq_digest uniq_resolve)
 (wrapped false)
 (libraries uniq.ml bos fpath))

(ocamllex uniq_meta_lexer)

(library
 (name uniq_meta)
 (public_name uniq.meta)
 (modules uniq_meta uniq_meta_lexer)
 (wrapped false)
 (libraries compiler-libs.common logs fmt fpath bos uniq.mod))

(library
 (name uniq_opam)
 (public_name uniq.papam)
 ; NOTE(dinosaure): Netflix's name, [dune] does not like [uniq.opam]...
 (modules uniq_opam)
 (wrapped false)
 (libraries fmt fpath opam-format opam-state opam-core))

(library
 (name uniq_cfg)
 (public_name uniq.cfg)
 (modules uniq_cfg)
 (wrapped false)
 (libraries compiler-libs.common cmdliner bos))

(library
 (name uniq_solver)
 (public_name uniq.solver)
 (modules uniq_solver)
 (wrapped false)
 (libraries logs fmt fpath uniq.cfg uniq.mod))

(library
 (name uniq_clos)
 (public_name uniq.clos)
 (modules uniq_clos)
 (wrapped false)
 (libraries logs fmt fpath uniq.cfg uniq.meta))

(library
 (name uniq_vendor)
 (public_name uniq.vendor)
 (modules uniq_vendor)
 (wrapped false)
 (libraries uniq.mod))

(library
 (name uniq_policy)
 (public_name uniq.policy)
 (modules uniq_policy)
 (wrapped false)
 (libraries uniq.meta bcfgt cmdliner))
